--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-fileupload": "^1.1.7-alpha.3",
+    "firebase": "^7.14.1",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
