--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "axios": "^0.18.1",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^4.4.1",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "font-family": "^0.2.0",
     "if-env": "^1.0.4",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.18.1",
